Segunda modificacion, rama dos, archivo dos

--- a/dos.html
+++ b/dos.html
@@ -17,5 +17,12 @@
             Profesor de asignatura: José Christian Narvaez<br>
             Estudiante: Galindo Villegas Tania Belen 3.-E DSM <br>
         </p>
+        <p>
+            El origen de HTML se remonta a 1980 <br>
+            HTML es el lenguaje de marcado principal de la web.<br>
+            Se ejecuta de forma nativa en todos los navegadores y es mantenido por el World Wide Web Consortium.
+        </p>
+    </font>    
+
 </body>
 </html>
